--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kubik_navigation",
   "version": "0.1.0",
   "targets": {
-    "js": {
+    "js_navigation": {
       "source": "src/javascripts/kubik_navigation.js",
       "distDir": "./app/assets/javascripts/"
     }
@@ -20,7 +20,9 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo": "^7.1.0",
+    "@rails/ujs": "^6.0.5",
     "dropzone": "^6.0.0-beta.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "sortablejs": "^1.15.0"
   }
 }
