--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 .active_admin_sample/tmp
 .active_admin_sample/node_modules
 .active_admin_sample/public/uploads
+.active_admin_sample/log
+.active_admin_sample/config/*.key
 test/dummy/tmp
 .parcel-cache
 /node_modules
